CSS editing, fixing temperature row alignment

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -5,6 +5,7 @@
 .weather-title {
   color: black;
   text-align: center;
+  font-family: "Quicksand", sans-serif;
 }
 
 .weather-card-main {
@@ -13,6 +14,7 @@
   background-color: rgba(246, 220, 212, 0.2);
   max-width: 500px;
   max-height: 350px;
+  min-width: 500px;
   margin: 0 auto;
   display: block;
 }
@@ -29,6 +31,9 @@
 }
 .navbar-brand {
   color: black !important;
+  font-family: "Quicksand", sans-serif;
+  font-style: bold;
+  font-size: 30px;
 }
 
 .form-control {
@@ -48,19 +53,23 @@
   margin: 0 auto;
 }
 
-.Weather ul {
+#date-description {
   margin: 0 auto;
   text-align: center;
   padding: 0;
 }
 
+ul {
+  margin: 0 auto;
+  padding: 0;
+}
+
 .Weather li {
   color: black;
-  font-style: italic;
   text-decoration: none;
   list-style: none;
   display: inline;
-  padding: 5px;
+  padding: 0px;
   margin: 0 auto;
 }
 
@@ -75,4 +84,25 @@
 .row {
   padding: 20px;
   margin: 0 auto;
+}
+
+div.col-6 {
+  padding: 10px;
+  margin: 0 auto;
+}
+
+#weather-list {
+  text-align: left;
+  font-size: 15px;
+  padding: 0px;
+  margin: 0 auto;
+}
+
+.Weather img {
+  height: 64px;
+  display: inline-block;
+}
+
+#main-temp {
+  font-size: 30px;
 }
